--- a/registro_exitoso.html
+++ b/registro_exitoso.html
@@ -13,7 +13,7 @@
                 <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
             </svg>
             <h1 class="text-2xl font-bold text-purple-700 mb-2">¡Registro Exitoso!</h1>
-            <p class="text-gray-700 mb-4">Tu cuenta ha sido creada correctamente. Ya puedes iniciar sesión y explorar nuestra plataforma.</p>
+            <p class="text-gray-700 mb-4">Tu cuenta ha sido creada correctamente. Revisa tu correo para poder iniciar sesión y explorar nuestra plataforma.</p>
             <a href="login.php" class="inline-block bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700 transition duration-300">Iniciar Sesión</a>
         </div>
     </div>
